--- a/public/components/customers/customers_view.html
+++ b/public/components/customers/customers_view.html
@@ -49,6 +49,10 @@
 							<input ng-model="customer.city" type="text" name="city">
 						</md-input-container>
 						<md-input-container class="md-block">
+							<label>Bairro</label>
+							<input ng-model="customer.district" type="text" name="district">
+						</md-input-container>
+						<md-input-container class="md-block">
 							<label>Rua</label>
 							<input ng-model="customer.street" type="text" name="street">
 						</md-input-container>
